# Tiger_Game

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Deep_Blue_Group_Project.h  Man_Mover.cpp  Man_Mover.h  Men_Mover.cpp  Men_Mover.h  Play_Tiger.cpp  README.md  Scored_MMover.cpp  Scored_MMover.h  Smart_Mover.cpp  Smart_Mover.h  Specific_Move_Handler.cpp  Specific_Move_Handler.h  Transition.cpp  Transition.h  Unorderded_State.cpp  Unorderded_State.h  Unordered_State.cpp  Unordered_State.h  constants.h  driver.cpp  function_api.h  game_runner.cpp  game_runner.h  general_util.cpp  general_util.h  man_move_helper_functions.cpp  man_move_helper_functions.h  men_util.cpp  men_util.h  submit.h  testing_util.cpp  testing_util.h
Scored_MMovers/: AvoidCapture.cpp  AvoidCapture.h  Inward.cpp  Inward.h  MarkTiger.cpp  MarkTiger.h  ScoreMod.h  Upward.cpp  Upward.h
Tiger-Game/: Board.cpp  Board.h  Man_Mover.cpp  Man_Mover.h  Play_Tiger.cpp  Play_Tiger.h  Scored_MMover.cpp  Scored_MMover.h  Smart_Mover.cpp  Smart_Mover.h  Tiger-Game.sln  Tiger-Game.vcxproj  function_api.h  game_runner.h  main.cpp  man_move_helper_functions.cpp  man_move_helper_functions.h
